# bandit-optimization

./: .gitignore  LICENSE  README.md  Regression theory.ipynb  Untitled.ipynb  pyproject.toml  run_optim_example.py  run_optim_example_microscope.py  run_optim_example_simul.py  run_optim_example_split-sted.py  run_optim_example_weight_prior.py  run_optim_example_weight_prior_2.py  run_optim_microscope.py  script.py  setup.py  simulated_images_analylis.ipynb
.ipynb_checkpoints/: simulated_images_analylis-checkpoint.ipynb
banditopt/: __init__.py  algorithms.py  analysis.py  decorr.py  decorr_res copy.py  decorr_res.py  hmc.py  microscope.py  models.py  objectives.py  optim.py  optim_microscope.py  simulate_image.py  split3.py  split_acquire.py  user before update.py  user.py  utils.py
debug_trialX/: X_0.csv  config.yml  dts_sampling_0.csv  dts_update_0.csv  optim.py  y_0.csv
debug_trialX_weight_prior/: X_0.csv  config.yml  dts_sampling_0.csv  dts_update_0.csv  y_0.csv
debug_trialX_weight_prior2/: X_0.csv  config.yml  dts_sampling_0.csv  dts_update_0.csv  y_0.csv
src/: analysis.py  decorr_res.py  objectives copy.py  objectives.py  optim.py  simulate_image.py  user copy.py  user.py
src/.ipynb_checkpoints/: TS_fitted_poly-checkpoint.py  algorithms-checkpoint.py  analysis-checkpoint.py  simulated_images_analylis-checkpoint.ipynb
src/banditopt/: objectives.py
sted_deg4_microscope/: algorithms.py  config.yml  imspector_config_confocal  imspector_config_sted  optim.py
untitled folder/debug_trialX/: X_0.csv  algorithms.py  config.yml  dts_sampling_0.csv  optim.py  (+2 more)
(+371 files in other folders)
