[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
before-all = "uname -a"

[project]
name = "banditopt"
version = "0.1.0"
authors = [
  { name="Anthony Bilodeau", email="anthony.bilodeau.1@ulaval.ca" },
  { name="Albert Michaud-Gagnon", email="albert.michaud-gagnon@cervo.ulaval.ca" }
]
maintainers = [
  { name="Anthony Bilodeau", email="anthony.bilodeau.1@ulaval.ca" }
]
description = "Bandit optimization algorithms for microscopy"
readme = "README.md"
keywords = ["microscopy", "sted", "bandit", "optimization"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "matplotlib",
    "statsmodels",
    "deap>=1.3",
    "scikit-learn",
    "numpy",
    "torch",
    "tqdm",
    "scikit-image"
]

[project.urls]
Homepage = "https://github.com/FLClab/bandit-optimization"
Issues = "https://github.com/FLClab/bandit-optimization/issues"